--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./calendar.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <title>Calendar</title>
 </head>
 
@@ -14,10 +15,12 @@
     <header class="container">
         <div class="jumbotron">
             <h1 class="display-title">Daily Planner</h1>
-            <p class="lead">Let's plan your day!!!</p>
-            <p class="currentDay" class="lead"></p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Open Planner</a>
-    </header>
+            <!-- <p class="lead">Let's plan your day!!!</p> -->
+            
+            <a class="btn btn-primary btn-lg" href="#"role="button">Open Planner</a>
+            <p class="today-is" id="lead"></p>
+    
+        </header>
     </div>
     <!-- <div class="container"></div>  -->
     <div class="row" id="0800"></div>
@@ -132,9 +135,7 @@
     </div>
 
 
-    <script src="./calendar.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="./calendar.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js" type=text/javascript></script>
 </body>
 
