updates to json

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <h1 class="display-title">Daily Planner</h1>
             <!-- <p class="lead">Let's plan your day!!!</p> -->
             
-            <a class="btn btn-primary btn-lg" href="#"role="button">Open Planner</a>
+            <a class="btn btn-primary btn-lg" href="#"role="button"></a>
             <p class="today-is" id="lead"></p>
     
         </header>
     </div>
-    <!-- <div class="container"></div>  -->
+    <div class="container"></div>  
     <div class="row" id="0800"></div>
     <div class="col-md-1 hr">
         08:00:
@@ -30,7 +30,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveBtn col-md-7">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -107,7 +107,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -118,7 +118,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -129,7 +129,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
