--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./calendar.css">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
     <title>Calendar</title>
 </head>
 
@@ -15,14 +18,14 @@
     <header class="container">
         <div class="jumbotron">
             <h1 class="display-title">Daily Planner</h1>
-            <!-- <p class="lead">Let's plan your day!!!</p> -->
-            
-            <a class="btn btn-primary btn-lg" href="#"role="button"></a>
+            <p class="lead">Let's plan your day!!!</p>
+
+            <a class="btn btn-primary btn-lg" href="#" role="button">Plan Schedule</a>
             <p class="today-is" id="lead"></p>
-    
-        </header>
+
+    </header>
     </div>
-    <div class="container"></div>  
+    <div class="container"></div>
     <div class="row" id="0800"></div>
     <div class="col-md-1 hr">
         08:00:
@@ -52,7 +55,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -63,7 +66,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -74,7 +77,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-5">
+    <button class="saveSchedule col-md-7">
 
     </button>
     </div>
@@ -135,7 +138,7 @@
     </div>
 
 
-    <script src="./calendar.js"></script>    
+    <script src="./calendar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js" type=text/javascript></script>
 </body>
 
