--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p class="lead">Let's plan your day!!!</p>
 
             <a class="btn btn-primary btn-lg" href="#" role="button">Plan Schedule</a>
+            <br>
             <p class="today-is" id="lead"></p>
 
     </header>
@@ -33,7 +34,7 @@
     <textarea class=" col-md-7">
 
 </textarea>
-    <button class="saveSchedule col-md-7">
+    <button class="submit col-md-7">
 
     </button>
     </div>
