--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
     </div>
     <div class="container">
         <div class="clearfix">
-            <div class="row" id="0800"></div>
+            <div class="row" id="hour-8">8am</div>
             <div class="col-md-1 hr">
-                08:00:
-            </div>
+                          </div>
             <textarea class="col-md-5">
 
     </textarea>
 
             <button type="button" class="btn btn-primary" id=>set schedule</button>
         </div>
-        <div class="row" id="0900"></div>
+        <div class="row" id="hour-9">9am</div>
         <div class="col-md-1 hr">
-            09:00:
+           
         </div>
         <textarea class="col-md-5" id = "textarea">
 
@@ -51,10 +50,9 @@
 
 
 
-        <div class="row" id="1000"></div>
+        <div class="row" id="hour-10">10am</div>
         <div class="col-md-1 hr">
-            10:00:
-        </div>
+                    </div>
         <textarea class="col-md-5">
 
     </textarea>
@@ -63,10 +61,9 @@
 
 
 
-        <div class="row" id="1100"></div>
+        <div class="row" id="hour-11">11am</div>
         <div class="col-md-1 hr">
-            11:00:
-        </div>
+            </div>
         <textarea class="col-md-5">
 
     </textarea>
@@ -75,10 +72,9 @@
 
 
 
-        <div class="row" id="1200"></div>
+        <div class="row" id="hour-12">12noon</div>
         <div class="col-md-1 hr">
-            12:00:
-        </div>
+                </div>
         <textarea class=" col-md-5">
 
 </textarea>
@@ -87,10 +83,9 @@
 
 
 
-        <div class="row" id="1300"></div>
+        <div class="row" id="hour-13">1pm</div>
         <div class="col-md-1 hr">
-            13:00:
-        </div>
+                    </div>
         <textarea class=" col-md-5">
 
 </textarea>
@@ -99,9 +94,9 @@
 
 
 
-        <div class="row" id="1400"></div>
+        <div class="row" id="hour-14">2pm</div>
         <div class="col-md-1 hr">
-            14:00:
+            
         </div>
         <textarea class=" col-md-5">
 
@@ -111,10 +106,9 @@
 
         </button>
 
-        <div class="row" id="1500"></div>
+        <div class="row" id="hour-15">3pm</div>
         <div class="col-md-1 hr">
-            15:00:
-        </div>
+                </div>
         <textarea class=" col-md-5">
 
 </textarea>
@@ -123,10 +117,9 @@
 
         </button>
 
-        <div class="row" id="1600"></div>
+        <div class="row" id="hour-16">4pm</div>
         <div class="col-md-1 hr">
-            16:00:
-        </div>
+                </div>
         <textarea class=" col-md-5">
 
 </textarea>
@@ -135,10 +128,9 @@
 
         </button>
 
-        <div class="row" id="1700"></div>
+        <div class="row" id="hour-17">5pm</div>
         <div class="col-md-1 hr">
-            17:00:
-        </div>
+                    </div>
         <textarea class=" col-md-5">
 
 </textarea>
