changes to timeblock colors

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="clearfix">
             <div class="container">
-                
+
             <div class="row" id="hour-8">8am</div>
             <div class="col-md-1 hr">
             </div>
@@ -37,17 +37,16 @@
 
     </textarea>
 
-            <button type="button" class="btn btn-primary" id=>set schedule</button>
+            <button type="button" class="btn btn-primary" id="set schedule">set-schedule</button>
         </div>
         <div class="row" id="hour-9">9am</div>
         <div class="col-md-1 hr">
-
         </div>
         <textarea class="col-md-5 txt-area" id="9">
 
     </textarea>
 
-        <button type="button" class="btn btn-primary" id="9am">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
 
 
@@ -59,7 +58,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="10am">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
 
 
@@ -70,7 +69,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="11am">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
 
 
@@ -81,7 +80,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="12pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
 
 
@@ -92,7 +91,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="1pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
 
 
@@ -104,7 +103,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="2pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
         </button>
 
@@ -115,7 +114,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="3pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
         </button>
 
@@ -126,7 +125,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="4pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
         </button>
 
@@ -137,7 +136,7 @@
 
         </textarea>
 
-        <button type="button" class="btn btn-primary" id="5pm">set schedule</button>
+        <button type="button" class="btn btn-primary" id="set schedule">set schedule</button>
 
         </button>
     </div>
